# claude-hivemind

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml
commands/: hive-broadcast.md  hive-ooda.md  hive-orchestrate.md  hive-plan.md  hive-share.md  hive-status.md  hive-sync.md  hive-team.md  hive-worker.md  hive.md
hooks/: hooks.json
monitor/: Cargo.toml
monitor/src/: app.rs  client.rs  main.rs  ui.rs
src/: cli.js  hub.js  mcp-server.js
src/hooks/: post-tool-use.js  pre-tool-use.js  session-end.js  session-start.js  task-mirror.js  user-prompt-submit.js
src/lib/: common.js  hook-util.js  hub-client.js  inject.js  watcher.js
test/: dispatch.js  durability.js  integration.js  mcp-smoke.js  mirror.js  observe.js  reconnect.js  throughput.js  watcher.js
